# OracleLink

./: .gitignore  OracleLink.rar  bot.py  breackout.py  main.py  mainBot.py  mainPaperTrade.py  pyproject.toml
apis/alltickerApi/: fetcher.py
apis/binanceApi/: __init__.py  fetcher.py
apis/yahooAPI/: fetcher.py
bot/: __init__.py  bot.py
bot/additions/: __init__.py  filteredPersitence.py
bot/commands/: __init__.py  baseCommands.py  botHandler.py
bot/utils/: __init__.py  parsers.py
custom_logger/: loggingFormatter.py  loggingManager.py
data/userData/: oracle_link_bot.pkl
logs/: bot.jsonl  bot.jsonl.2025-04-16
paperTrading/: __init__.py
paperTrading/advanced_skip/core/: simulator.py
paperTrading/advanced_skip/enums/: __init__.py  enums.py
paperTrading/core/: __init__.py  paperTrader.py
paperTrading/enums/: __init__.py  enums.py
paperTrading/models/: __init__.py  baseTradingData.py  orderRequest.py  portfolio.py  position.py  tradeRecord.py
tradingComponents/Dow/: __init__.py  dow.py
tradingComponents/Dow/utils/: __init__.py  dowEnums.py  plotter.py
tradingComponents/patterns/: __init__.py  breackout.py
tradingComponents/strategies/: __init__.py  kianStrat.py  shadowsTrendingTouch.py
utils/: parsers.py  timeUtils.py
